# Grover

./: .gitignore  AGENTS.md  ARCHITECTURE_ANALYSIS.md  BUILD_LOG.md  CLAUDE.md  README.md  __init__.py  config.py  contracts.py  hw4_thorn.code-workspace  pyproject.toml  run_champion_challenger.py  run_pipeline.py
.agents/: mle_agent.md  orchestrator_agent.md  pi_agent.md
alignment/: __init__.py  fgw.py  interface.py  sinkhorn.py  surrogate.py
artifacts/: experiment_log.jsonl
configs/: baselines_synth.yaml  thorn_synth.yaml
data/: __init__.py  synthetic.py
doc/: ARCHITECTURE.md  GRADING_RUBRIC.md  PROJECT_BRIEF.md
docs/: BLUEPRINT.md  CHECKPOINT.md  GOALS.md  STATUS.md  gates.md  math.md  positioning.md  trace.md
models/: __init__.py  baselines.py  thorn.py
observers/: __init__.py  lof_ratio.py
paper/: references.bib
reference/: THORN_revision_checklist.md
references/: kb_index.json  knowledge_base.jsonl
routing/: regularizers.py
scripts/: _metrics_helper.py  analyze_observer_orthogonality.py  check_gates.py  check_reproducibility.py  plot_diagnostics.py  run_baseline_suite.py  run_baselines.sh  run_experiment.py  run_lora_rank_sweep.py  run_observer_ablation.py  run_stability_study.py  run_thorn.sh  run_thornpp_variants.py  stage1_verify.sh
src/: 00_eda.py  01_data_pipeline.py  02_baseline_cnn.py  03_improved_cnn.py  04_evaluation.py  05_kaggle_predict.py  run_baseline.py  utils.py
tests/: conftest.py  test_gate_mapping.py  test_harness_smoke.py  test_router_attention.py  test_shape_contracts.py  test_views_builders.py
thorn/: debug.py  (+2 more)
(+41 files in other folders)
