[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thorn-research"
version = "0.1.0"
description = "THORN: Transport-aligned Heterogeneous Observer-Routed Neighborhood attention"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

